<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:id="@+id/topBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal|top" >

        <EditText
            android:id="@+id/zipCode"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/zipcodehint"
            android:inputType="number" >
        </EditText>

        <Button
            android:id="@+id/goButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/search" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_below="@+id/topBox"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/noGasPrices" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="320dip"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="a150c682a43c4b9" />

</RelativeLayout>
